# local

./: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.e2e.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  preview.yml  release.yml
e2e/: chat.spec.ts
sidecar/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sidecar/scripts/: bundle.mjs
sidecar/src/: claude-session.ts  index.ts  protocol.ts  stdio-ipc.ts
src/: App.tsx  index.css
src-tauri/: .clippy.toml  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuthErrorBanner.test.tsx  AuthErrorBanner.tsx  BuildStreamPanel.test.tsx  BuildStreamPanel.tsx  ChatView.test.tsx  ChatView.tsx  Logo.test.tsx  Logo.tsx  Message.test.tsx  MessageBubble.tsx  NetworkBanner.test.tsx  NetworkBanner.tsx  ProjectScopeSelector.test.tsx  ProjectScopeSelector.tsx  SetupWizard.test.tsx  SetupWizard.tsx  Shell.test.tsx  Shell.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  ToolCallDisplay.test.tsx  ToolCallDisplay.tsx  WaveSidebar.test.tsx  WaveSidebar.tsx
src/hooks/: useBuildSessions.test.ts  useBuildSessions.ts  useBuildStream.test.ts  useBuildStream.ts  useChat.test.ts  useChat.ts  useClaudeStream.test.ts  useClaudeStream.ts  useConversations.test.ts  useConversations.ts  useGreet.test.ts  useGreet.ts  useMcpTools.test.ts  useMcpTools.ts  useNetworkStatus.test.ts  (+12 more)
(+14 files in other folders)
